fix: made the gaps uniform in home page

--- a/src/globals.css
+++ b/src/globals.css
@@ -74,6 +74,9 @@ input[type='checkbox'] {
   .p-responsive {
     @apply p-2 md:p-3 lg:p-4;
   }
+  .px-responsive {
+    @apply px-2 md:px-3 lg:px-4;
+  }
   .pb-responsive {
     @apply pb-2 md:pb-3 lg:pb-4;
   }
